[tool.poetry]
name = "esa_geo_utils"
version = "0.1.0"
description = "A python library for the Environmental Science and Analysis division's geospatial utilities."
authors = ["Ed Fawcett-Taylor <ed.fawcett-taylor@defra.gov.uk>"]

[tool.poetry.dependencies]
python = "^3.7"
GDAL = "2.4.2"
pyspark = "3.0.1"
geojson = "^2.5.0"
geopandas = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = {extras = ["toml"], version = "^5.5"}
pytest-cov = "^2.12.1"
nox = "^2021.6.12"
black = "^21.9b0"
mypy = "^0.910"
flake8 = "^3.9.2"
flake8-black = "^0.2.3"
flake8-isort = "^4.0.0"
flake8-bugbear = "^21.9.1"
flake8-bandit = "^2.1.2"
flake8-annotations = "^2.6.2"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.0"
isort = "^5.9.3"
safety = "^1.10.3"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
